--- a/styles.css
+++ b/styles.css
@@ -3,46 +3,53 @@ body{
   text-align:center;
   background-color: #faf2f2;
 }
-.penguin{
-  position: absolute;
-  right: 720px;
-  top: 3450px;
-  width:10%;
+.contact-message{
+  width: 50%;
+  margin: 40px auto 40px auto;
+  font-weight: lighter;
+  font-size: 1.5rem;
+  line-height: 2;
 }
 .dog{
-  width: 10%;
-  position: absolute;
-  right: 500px;
-  top:1050px;
-  }
+  margin-top: 10px;
+  width:20%;
+}
+.penguin{
+  margin-top: 20px;
+  width:20%;
+}
 p{
-  font-size: 40px;
+  font-size: 1.5rem;
   line-height: 2;
 }
 .rainbow{
   position: relative;
-  top: 100px;
-  right: 280px;
-  width: 15%;
+  top: 150px;
+  right: 350px;
+  width: 25%;
 }
 .cloud{
   position: relative;
-  bottom: 100px;
-  left: 280px;
-  width: 15%;
+  bottom: 150px;
+  left: 350px;
+  width: 20%;
 }
 .picwork{
   color: black;
-  margin: 20px auto;
-  font-family: 'IndieFlower', cursive;
-  font-size: 20px;
+  font-family: 'Montserrat',sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 20px auto 0 auto;
 }
-.contact-message{
-  width: 60%;
-  margin: 40px auto 40px auto;
+.editingwork{
+  color: black;
+  font-family: 'Montserrat',sans-serif;
+  font-size: 1.5rem;
+  margin: 20px 0 0 257px;
+  font-weight: bold;
 }
 .contact-me{
-  font-family: 'IndieFlower', cursive;
+  font-family: 'Montserrat',sans-serif;
 }
 hr{
   margin: 100px auto;
@@ -62,17 +69,17 @@ hr{
   margin-top: 0;
   }
 .coding{
-  width: 20%;
+  width: 25%;
   float: left;
   margin-right: 30px;
 }
 .photography{
-  width: 20%;
+  width: 25%;
   float: right;
   margin-left: 30px;
 }
 .editing{
-  width: 20%;
+  width: 25%;
   float: left;
   margin-right: 30px;
 }
@@ -105,15 +112,15 @@ h3{
   text-align: left;
 }
 .skill-one{
-  width: 50%;
+  width: 60%;
   margin: 100px auto;
 }
 .skill-two{
-  width: 50%;
+  width: 60%;
   margin: 100px auto ;
 }
 .skill-three{
-  width: 50%;
+  width: 60%;
   margin: 100px auto;
 }
 a:hover{
@@ -123,8 +130,8 @@ a{
   margin: 20px 20px;
   color: #EAF6F6;
   font-family: 'Montserrat' , sans-serif;
+  font-size: 1.5rem;
   text-decoration: none;
-  font-size:2rem;
 }
 .bottom-container{
   padding-top: 10px;
@@ -133,19 +140,15 @@ a{
 }
 .copyright{
   color: #EAF6F6;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  margin: 0 auto;
 }
 .einstein{
   width: 20%;
 }
 .intro{
+  font-size: 1.75rem;
   line-height: 2;
-}
-.editingwork{
-  color: black;
-  font-family: 'IndieFlower', cursive;
-  font-size: 20px;
-  margin-left: 180px;
 }
 .profile{
   background-color: #faf2f2;
@@ -193,4 +196,3 @@ width:140px;
 	position:relative;
 	top:1px;
 }
-
