--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
   width:20%;
 }
 .penguin{
-  margin-top: 20px;
+  padding-top: 60px;
   width:20%;
 }
 p{
@@ -39,14 +39,16 @@ p{
   font-family: 'Montserrat',sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 20px auto 0 auto;
+  margin-top: 20px;
+  margin-left: 0;
 }
 .editingwork{
   color: black;
   font-family: 'Montserrat',sans-serif;
   font-size: 1.5rem;
-  margin: 20px 0 0 257px;
+  margin-top: 20px;
   font-weight: bold;
+  margin-left: 0;
 }
 .contact-me{
   font-family: 'Montserrat',sans-serif;
@@ -58,14 +60,14 @@ hr{
   width: 4%;
 }
 .intro{
-  width: 50%;
+  width: 60%;
   margin: auto;
 }
 .hello{
   text-align: center;
 }
 .profile-pic{
-  width: 20%;
+  width: 25%;
   margin-top: 0;
   }
 .coding{
@@ -112,15 +114,15 @@ h3{
   text-align: left;
 }
 .skill-one{
-  width: 60%;
+  width: 80%;
   margin: 100px auto;
 }
 .skill-two{
-  width: 60%;
+  width: 80%;
   margin: 100px auto ;
 }
 .skill-three{
-  width: 60%;
+  width: 80%;
   margin: 100px auto;
 }
 a:hover{
@@ -131,16 +133,16 @@ a{
   color: #EAF6F6;
   font-family: 'Montserrat' , sans-serif;
   font-size: 1.5rem;
-  text-decoration: none;
+  text-decoration:none;
 }
 .bottom-container{
-  padding-top: 10px;
+  padding-top: 20px;
   background-color: #66BFBF;
   padding-bottom: 10px;
 }
 .copyright{
   color: #EAF6F6;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 0 auto;
 }
 .einstein{
