--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ body{
   text-align:center;
   background-color: #faf2f2;
 }
+span{
+	color: crimson;
+}
 .contact-message{
   width: 50%;
   margin: 40px auto 40px auto;
