--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,22 @@ body{
 span{
 	color: crimson;
 }
+#codeforces{
+  margin: 0;
+  color: black;
+  font-size: 1.4rem;
+}
+#codeforces:hover{
+  color: #11999E;
+}
+#codechef{
+  margin: 0;
+  color: black;
+  font-size: 1.4rem;
+}
+#codechef:hover{
+  color: #11999E;
+}
 .contact-message{
   width: 50%;
   margin: 40px auto 40px auto;
