--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ span{
 }
 #codeforces{
   margin: 0;
-  color: black;
+  color: #000000;
   font-size: 1.4rem;
 }
 #codeforces:hover{
@@ -16,7 +16,7 @@ span{
 }
 #codechef{
   margin: 0;
-  color: black;
+  color: #000000;
   font-size: 1.4rem;
 }
 #codechef:hover{
